--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <a href="#">Materiales</a>
           </li>
           <li>
-            <a href="/paguinas/contactarnos.html">Contactanos</a>
+            <a href="paguinas/contactarnos.html">Contactanos</a>
           </li>
           <li>
             <a href="#">Diseños</a>
@@ -55,7 +55,7 @@
             <a href="#">Precios</a>
           </li>
           <li>
-            <a href="/paguinas/PAGOS.html">Pagos</a>
+            <a href="paguinas/PAGOS.html">Pagos</a>
           </li>
           <li>
             <a href="#">More</a>
