--- a/paguinas/contactarnos.html
+++ b/paguinas/contactarnos.html
@@ -34,7 +34,7 @@
         <!-- Left Nav2 -->
         <ul class="nav-menu">
           <li>
-            <a href="/index.html">Inico</a>
+            <a href="index.html">Inico</a>
           </li>
           <li >
             <a href="#">Proyectos</a>
@@ -52,7 +52,7 @@
             <a href="#">Precios</a>
           </li>
           <li>
-            <a href="/paguinas/PAGOS.html">Pagos</a>
+            <a href="paguinas/PAGOS.html">Pagos</a>
           </li>
           <li>
             <a href="#">More</a>
