--- a/paguinas/contactarnos.html
+++ b/paguinas/contactarnos.html
@@ -26,12 +26,12 @@
       <i class="fas fa-bars fa-2x"></i>
     </div>
   
-    <div class="container">
-      <!-- Navigation2 -->
+       <div class="container">
+      <!-- Navigation -->
       <nav class="nav-main">
-        <!-- Brand2 -->
-        <img src="https://cdn-icons-png.flaticon.com/512/126/126509.png" alt="TechNews Logo" class="nav-brand">
-        <!-- Left Nav2 -->
+        <!-- Brand -->
+        <img src="imagenes de la paguinaweb/bosquejo.png" alt="TechNews Logo" class="nav-brand">
+        <!-- Left Nav -->
         <ul class="nav-menu">
           <li>
             <a href="index.html">Inico</a>
@@ -43,7 +43,7 @@
             <a href="#">Materiales</a>
           </li>
           <li>
-            <a href="#">Contactanos</a>
+            <a href="paguinas/contactarnos.html">Contactanos</a>
           </li>
           <li>
             <a href="#">Diseños</a>
