--- a/contactarnos.html
+++ b/contactarnos.html
@@ -34,16 +34,16 @@
         <!-- Left Nav2 -->
         <ul class="nav-menu">
           <li>
-            <a href="/index.html">Inico</a>
+            <a href="index.html">Inico</a>
           </li>
           <li >
-            <a href="#">Proyectos</a>
+            <a href="proyectos.html">Proyectos</a>
           </li>
           <li>
             <a href="#">Materiales</a>
           </li>
           <li>
-            <a href="#">Contactanos</a>
+            <a href="contactarnos.html">Contactanos</a>
           </li>
           <li>
             <a href="#">Diseños</a>
@@ -52,7 +52,7 @@
             <a href="#">Precios</a>
           </li>
           <li>
-            <a href="/paguinas/PAGOS.html">Pagos</a>
+            <a href="PAGOS.html">Pagos</a>
           </li>
           <li>
             <a href="#">More</a>
