--- a/paguinas/PAGOS.html
+++ b/paguinas/PAGOS.html
@@ -21,43 +21,52 @@
     <body>
 
         <div class="menu-btn">
-          <i class="fas fa-bars fa-2x"></i>
-        </div>
-      
-        <div class="container">
-          <!-- Navigation2 -->
-          <nav class="nav-main">
-            <!-- Brand2 -->
-            <img src="https://cdn-icons-png.flaticon.com/512/1077/1077976.png" alt="TechNews Logo" class="nav-brand">
-            <!-- Left Nav2 -->
-            <ul class="nav-menu">
-              <li>
-                <a href="/index.html">Inico</a>
-              </li>
-              <li >
-                <a href="#">Proyectos</a>
-              </li>
-              <li>
-                <a href="#">Materiales</a>
-              </li>
-              <li>
-                <a href="/paguinas/contactarnos.html">Contactanos</a>
-              </li>
-              <li>
-                <a href="#">Diseños</a>
-              </li>
-              <li>
-                <a href="#">Precios</a>
-              </li>
-              <li>
-                <a href="/paguinas/PAGOS.html">Pagos</a>
-              </li>
-              <li>
-                <a href="#">More</a>
-              </li>
-            </ul>
-        </nav>
-        <hr>
+      <i class="fas fa-bars fa-2x"></i>
+    </div>
+  
+    <div class="container">
+      <!-- Navigation -->
+      <nav class="nav-main">
+        <!-- Brand -->
+        <img src="imagenes de la paguinaweb/bosquejo.png" alt="TechNews Logo" class="nav-brand">
+        <!-- Left Nav -->
+        <ul class="nav-menu">
+          <li>
+            <a href="index.html">Inico</a>
+          </li>
+          <li >
+            <a href="#">Proyectos</a>
+          </li>
+          <li>
+            <a href="#">Materiales</a>
+          </li>
+          <li>
+            <a href="paguinas/contactarnos.html">Contactanos</a>
+          </li>
+          <li>
+            <a href="#">Diseños</a>
+          </li>
+          <li>
+            <a href="#">Precios</a>
+          </li>
+          <li>
+            <a href="paguinas/PAGOS.html">Pagos</a>
+          </li>
+          <li>
+            <a href="#">More</a>
+          </li>
+        </ul>
+  
+        <!-- Right Nav -->
+        <ul class="nav-menu-right">
+          <li>
+            <a href="#">
+              <i class="fas fa-search"></i>
+            </a>
+          </li>
+        </ul>
+      </nav>
+      <hr>
             <!-- Right Nav -->
         <!-- SHOWCASE2 -->
       <header class="showcase">
