--- a/paguinas/next.html
+++ b/paguinas/next.html
@@ -27,11 +27,11 @@
     </div>
   
     <div class="container">
-      <!-- Navigation2 -->
+      <!-- Navigation -->
       <nav class="nav-main">
-        <!-- Brand2 -->
-        <img src="https://cdn-icons-png.flaticon.com/512/2942/2942441.png" alt="TechNews Logo" class="nav-brand">
-        <!-- Left Nav2 -->
+        <!-- Brand -->
+        <img src="imagenes de la paguinaweb/bosquejo.png" alt="TechNews Logo" class="nav-brand">
+        <!-- Left Nav -->
         <ul class="nav-menu">
           <li>
             <a href="index.html">Inico</a>
@@ -43,7 +43,7 @@
             <a href="#">Materiales</a>
           </li>
           <li>
-            <a href="./paguinas/contactarnos.html">Contactanos</a>
+            <a href="paguinas/contactarnos.html">Contactanos</a>
           </li>
           <li>
             <a href="#">Diseños</a>
@@ -52,7 +52,7 @@
             <a href="#">Precios</a>
           </li>
           <li>
-            <a href="./paguinas/PAGOS.html">Pagos</a>
+            <a href="paguinas/PAGOS.html">Pagos</a>
           </li>
           <li>
             <a href="#">More</a>
